day 9 alternate solution
extrapolateBackward is equivalent to do extrapolateForward to the inverse sequence